<resources>
    <string name="app_name">SharedPlaylist</string>
    <string name="make_list">Crear lista</string>
    <string name="search_list">Buscar lista</string>
    <string name="serviceErrorYt">Se ha producido un error en el servicio de YouTube</string>
    <string name="jsonExcpt">Surgió un problema al tratar de conectarse a Youtube</string>
    <string name="preferencesButton">Preferencias</string>
    <string name="namePref">Tu nombre</string>
    <string name="nameSufPref">Por favor, introduce tu nombre</string>
    <string name="amountPref">Numero de videos </string>
    <string name="amountSubPref">Inserta el número de videos de YouTube a mostrar</string>
    <string name="server_setting">Como servidor</string>
    <string name="client_settings">Como cliente</string>
    <string name="bt_act">Seleccionar dispositivo</string>
    <string name="conn_settings">Cantidad de conexiones</string>
    <string name="connSufPref">Establece al cantidad de conexiones que el servidor aceptará</string>
    <string name="reproTit">Reproducción ciclica</string>
    <string name="reprSufPred">Marcalo si los items deben ir al final de la lista cuando finalicen</string>
    <string name="checkPref">Verificar items recibidos</string>
    <string name="checkSufPref">Marcalo si quieres verificar todos los items entrantes</string>
    <string name="createlist">¿Desea recuperar la lista o crear una nueva?</string>
    <string name="copyfound">Copia de seguridad encontrada</string>
    <string name="neww">Nueva</string>
    <string name="restore">Recuperar</string>
    <string name="videoadded">Video añadido a la lista.</string>
    <string name="conectedto">Conectado a</string>
    <string name="songaddedlist">Canción añadida a la lista.</string>
    <string name="bluetoothnotsuported">El dispositivo no soporta bluetooth.</string>
    <string name="deletelistelement">¿Desea eliminar el elemento de la lista?</string>
    <string name="deleteelement">Eliminar elemento</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="endreproductionlist">Fin de la lista de reproducción.</string>
    <string name="reproductionerror">Error al reproducir.</string>
    <string name="reproductingnextsong">Reproduciendo siguiente canción.</string>
    <string name="conected">Conectado</string>
    <string name="notavaliablesendwithoutconection">Imposible enviar sin una conexión.</string>
    <string name="songnotavaliable">La canción no está disponible.</string>
    <string name="imposibleconectdevice">Impsible contectar el dispositivo.</string>
    <string name="conectionlost">Conexión perdida.</string>
    <string name="notvinculateddispositives">No hay dispositivos vinculados.</string>
    <string name="iamconectedto">Me conectado a </string>
    <string name="notfound">No se han encontrado dispositivos.</string>
    <string name="helpBut">Ayuda</string>
    <string name="forward_song">¿Desea reenviar la canción?</string>
    <string name="forward_element">Reenviar elemento</string>
    <string name="title_activity_preferences">Actividad de preferencias</string>
    <string name="reqblue">Esta caracteristica requiere activar el bluetooth</string>
    <string name="makevisible">Hacer visible</string>
</resources>
