<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/namePref"
        android:key="username"
        android:summary="@string/nameSufPref" />

    <PreferenceCategory
        android:title="@string/server_setting"
        android:key="pref_key_server_settings">
        <EditTextPreference
            android:title="@string/conn_settings"
            android:key="connection"
            android:summary="@string/connSufPref"
            android:inputType="number"
            android:defaultValue="10" />

        <CheckBoxPreference
            android:title="@string/reproTit"
            android:defaultValue="false"
            android:summary="@string/reprSufPred"
            android:key="cyclRep" />

        <CheckBoxPreference
            android:title="@string/checkPref"
            android:defaultValue="false"
            android:summary="@string/checkSufPref"
            android:key="check_items" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/client_settings"
        android:key="pref_key_sclient_settings">
        <EditTextPreference
            android:title="@string/amountPref"
            android:key="amount"
            android:summary="@string/amountSubPref"
            android:inputType="number"
            android:defaultValue="20" />
        </PreferenceCategory>


</PreferenceScreen>